# newport

./: .gitattributes  .gitignore  Cargo.toml  IDEAS.md  LICENSE  PROJECT.md  README.md  RESEARCH.md  rust-toolchain  rustfmt.toml  todo.txt
.github/workflows/: CI.yml  ci.yml  clippy_check.yml  fmt.yml
assets/: test.bar  test.foo  test.test
assets/branding/: logo_white_small.tex
assets/editor/: close_button.tex
assets/fonts/: consola.font  menlo_regular.font
assets/levels/: default.level
assets/meshes/: cube.glb  cube.gltf  cube.mesh  plane.gltf  sphere.glb
assets/pipelines/: debug2d.graphics_pipeline  debug3d.graphics_pipeline  gpu_example.graphics_pipeline  imgui.graphics_pipeline  imgui.pipeline  mesh.graphics_pipeline  present.graphics_pipeline  present.pipeline  test.pipeline
assets/scenes/: debug.scene
cache/: assets.cache
config/: editor.toml  engine.toml  game.toml
contents/: test.foo
contents/meshes/: teapot.gltf
contents/pipelines/: imgui.graphics_pipeline
crates/asset/: Cargo.toml
crates/core/: Cargo.toml
crates/ecs/: Cargo.toml
crates/ecs/macros/: Cargo.toml
crates/ecs/src/: component.rs  entity.rs  lib.rs  query.rs  schedule.rs  system.rs  world.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/engine/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: game.rs  game_state.rs  lib.rs  render_state.rs
crates/game3d/: Cargo.toml
crates/game3d/src/: components.rs  game.rs  input.rs  lib.rs  systems.rs
crates/game3d/src/editor/: mod.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: buffer.rs  command_buffer.rs  device.rs  gpu.rs  graphics_pipeline.rs  instance.rs  lib.rs  render_pass.rs  shader.rs  texture.rs
crates/gpu/src/vk/: buffer.rs  command_buffer.rs  device.rs  graphics_pipeline.rs  instance.rs  mod.rs  render_pass.rs  shader.rs  texture.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: font.rs  graphics.rs  lib.rs  mesh.rs
crates/imgui/: Cargo.toml
crates/imgui/src/: gruvbox.rs  layout.rs  paint.rs  retained.rs  style.rs
crates/imgui/src/widgets/: checkbox.rs  label.rs  mod.rs  panel.rs  scrollbox.rs  text_edit.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/math/: Cargo.toml
crates/newport_asset/: Cargo.toml
crates/newport_asset/src/: asset.rs  asset_cache.rs  asset_manager.rs  asset_ref.rs  de.rs  importer.rs  lib.rs  manager.rs  path_cache.rs  reference.rs  registers.rs  uuid.rs
crates/newport_cache/: Cargo.toml
crates/newport_cache/src/: lib.rs
crates/newport_codegen/: Cargo.toml
crates/newport_codegen/src/: lib.rs
crates/newport_core/: Cargo.toml
crates/newport_core/src/: containers.rs  lib.rs  math.rs
crates/newport_ecs/: Cargo.toml
crates/newport_ecs/src/: component.rs  entity.rs  lib.rs  query.rs  system.rs  test.rs  world.rs
crates/newport_editor/: Cargo.toml
crates/newport_editor/src/: asset_browser.rs  details.rs  editable.rs  editor.rs  lib.rs  menu_tab.rs  outliner.rs  split_view.rs  view.rs  viewport.rs
crates/newport_egui/: Cargo.toml
crates/newport_egui/src/: lib.rs
crates/newport_engine/: Cargo.toml
crates/newport_engine/src/: builder.rs  engine.rs  lib.rs  module.rs
crates/newport_game/: Cargo.toml
crates/newport_game/src/: components.rs  editor.rs  game.rs  game_state.rs  level_editor.rs  lib.rs  render_state.rs
crates/newport_game/src/editor/: details.rs  mod.rs  outliner.rs  viewport.rs
crates/newport_gpu/: Cargo.toml  build.rs
crates/newport_gpu/src/: buffer.rs  command_buffer.rs  context.rs  device.rs  gpu.rs  graphics_pipeline.rs  instance.rs  lib.rs  pipeline.rs  receipt.rs  render_pass.rs  shader.rs  shaders.rs  texture.rs  vk.rs
crates/newport_gpu/src/vk/: buffer.rs  command_buffer.rs  context.rs  device.rs  graphics_pipeline.rs  instance.rs  mod.rs  pipeline.rs  receipt.rs  render_pass.rs  shader.rs  texture.rs
crates/newport_graphics/: Cargo.toml  build.rs
crates/newport_graphics/src/: font.rs  graphics.rs  lib.rs  mesh.rs  pipeline.rs  scene.rs  texture.rs
crates/newport_imgui/: Cargo.toml
crates/newport_imgui/src/: builder.rs  context.rs  gruvbox.rs  gui.rs  id.rs  input.rs  layout.rs  lib.rs  organization.rs  paint.rs  response.rs  retained.rs  spacing.rs  style.rs  widget.rs
crates/newport_imgui/src/controls/: button.rs
crates/newport_imgui/src/widgets/: button.rs  checkbox.rs  label.rs  mod.rs  panel.rs  scrollbox.rs  text_edit.rs
crates/newport_log/: Cargo.toml
crates/newport_log/src/: lib.rs
crates/newport_math/: Cargo.toml
crates/newport_math/src/: color.rs  lib.rs  mat4.rs  quat.rs  rect.rs  spirv.rs  vec2.rs  vec3.rs  vec4.rs
crates/newport_os/: Cargo.toml
crates/newport_os/src/: dialog.rs  input.rs  lib.rs  library.rs  time.rs  win32.rs  window.rs
crates/newport_os/src/win32/: comdlg.rs  dwmapi.rs  kernel32.rs  mod.rs  user32.rs  uxtheme.rs
crates/newport_platform/: Cargo.toml
crates/newport_serde/: Cargo.toml
crates/newport_shaders/: Cargo.toml
crates/newport_shaders/src/: lib.rs
crates/newport_sync/: Cargo.toml
crates/os/: Cargo.toml
crates/platform/: Cargo.toml
crates/serde/: Cargo.toml
crates/sync/: Cargo.toml
crates/sys/: Cargo.toml
examples/: editor.rs  game.rs  game3d.rs  gpu.rs  hello_world.rs  imgui.rs  levy.rs
examples/game3d/: Cargo.toml
examples/game3d/src/: main.rs
examples/hello_world/: Cargo.toml
runtime/: README.md
runtime/asset/: Cargo.toml
runtime/asset/src/: importer.rs  lib.rs  manager.rs  path_cache.rs  reference.rs
runtime/cache/: Cargo.toml
runtime/cache/src/: lib.rs
runtime/edgui/: Cargo.toml
runtime/engine/: Cargo.toml
runtime/engine/src/: builder.rs  engine.rs  module.rs  uuid.rs
runtime/game/: Cargo.toml
runtime/game/src/: components.rs  game.rs  lib.rs  render.rs  systems.rs
runtime/game/src/ecs/: entity.rs  mod.rs  query.rs  schedule.rs  world.rs
runtime/game/src/editor/: mod.rs
runtime/game3d/: Cargo.toml
runtime/gpu/: Cargo.toml
runtime/graphics/: Cargo.toml
runtime/math/: Cargo.toml
runtime/physics3d/: Cargo.toml
runtime/resources/: Cargo.toml
src/: lib.rs  main.rs
(+274 files in other folders)
