[package]
name = "newport"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Modular Game Engine built in Rust"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[workspace]
members = ["crates/*"]

[dependencies]
newport_platform  = { path = "crates/platform", version = "0.2.0" }
newport_asset     = { path = "crates/asset", version = "0.2.0" }
newport_log       = { path = "crates/log", version = "0.2.0" }
newport_engine    = { path = "crates/engine", version = "0.2.0" }
newport_gpu       = { path = "crates/gpu", version = "0.2.0" }
newport_graphics  = { path = "crates/graphics", version = "0.2.0" }
newport_math      = { path = "crates/math", version = "0.2.0" }
newport_ecs       = { path = "crates/ecs", version = "0.2.0" }
newport_imgui     = { path = "crates/imgui", version = "0.2.0" }
newport_serde     = { path = "crates/serde", version = "0.2.0" }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "gpu"
path = "examples/gpu.rs"