[package]
name = "newport"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Modular Game Engine built in Rust"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[workspace]
members = ["runtime/*"]

[dependencies]
newport_platform  = { path = "runtime/platform", version = "0.2.0" }
newport_asset     = { path = "runtime/asset", version = "0.2.0" }
newport_engine    = { path = "runtime/engine", version = "0.2.0" }
newport_gpu       = { path = "runtime/gpu", version = "0.2.0" }
newport_graphics  = { path = "runtime/graphics", version = "0.2.0" }
newport_math      = { path = "runtime/math", version = "0.2.0" }
newport_serde     = { path = "runtime/serde", version = "0.2.0" }
newport_game    = { path = "runtime/game", version = "0.1.0" }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "gpu"
path = "examples/gpu.rs"

[[example]]
name = "game3d"
path = "examples/game3d.rs"
