[package]
name = "newport"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Modular Game Engine built in Rust"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[workspace]
members = ["src/runtime/*"]

[lib]
path = "src/lib.rs"

[dependencies]
newport_platform  = { path = "src/runtime/platform", version = "0.2.0" }
newport_asset     = { path = "src/runtime/asset", version = "0.2.0" }
newport_engine    = { path = "src/runtime/engine", version = "0.2.0" }
newport_gpu       = { path = "src/runtime/gpu", version = "0.2.0" }
newport_graphics  = { path = "src/runtime/graphics", version = "0.2.0" }
newport_math      = { path = "src/runtime/math", version = "0.2.0" }
newport_serde     = { path = "src/third_party/serde", version = "0.2.0" }
newport_game      = { path = "src/runtime/game", version = "0.1.0" }

[[example]]
name = "hello_world"
path = "src/examples/hello_world.rs"

[[example]]
name = "gpu"
path = "src/examples/gpu.rs"

[[example]]
name = "game3d"
path = "src/examples/game3d.rs"
