[package]
name = "newport_ecs"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Custom ECS made for Newport"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
math   = { path = "../math", version = "0.2.0", package = "newport_math" }
serde  = { path = "../serde", version = "0.2.0", package = "newport_serde" }
macros = { path = "macros", version = "0.1.0", package = "newport_ecs_macros" }