[package]
name = "newport_ecs"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Custom ECS made for Newport"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
serde  = { path = "../serde", version = "0.2.0", package = "newport_serde" }