[package]
name = "newport_ecs"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Custom ECS made for Newport"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
serde  = { path = "../serde", version = "0.2.0", package = "newport_serde" }
sync  = { path = "../sync", version = "0.1.0", package = "newport_sync" }
engine  = { path = "../engine", version = "0.2.0", package = "newport_engine" }
log  = { path = "../log", version = "0.2.0", package = "newport_log" }
asset  = { path = "../asset", version = "0.2.0", package = "newport_asset" }