[package]
name = "newport_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math 		= { path = "../math", version = "0.2.0", package = "newport_math" }
graphics 	= { path = "../graphics", version = "0.2.0", package = "newport_graphics" }
gpu 		= { path = "../gpu", version = "0.2.0", package = "newport_gpu" }
asset 		= { path = "../asset", version = "0.2.0", package = "newport_asset" }
engine 		= { path = "../engine", version = "0.2.0", package = "newport_engine" }
imgui 		= { path = "../imgui", version = "0.2.0", package = "newport_imgui" }