[package]
name = "newport_game3d"
version = "0.1.0"
edition = "2018"

[dependencies]
ecs 		= { path = "../ecs", version = "0.2.0", package = "newport_ecs" }
math 		= { path = "../math", version = "0.2.0", package = "newport_math" }
graphics 	= { path = "../graphics", version = "0.2.0", package = "newport_graphics" }
gpu 		= { path = "../gpu", version = "0.2.0", package = "newport_gpu" }
asset 		= { path = "../asset", version = "0.2.0", package = "newport_asset" }
engine 		= { path = "../engine", version = "0.2.0", package = "newport_engine" }
serde 		= { path = "../serde", version = "0.2.0", package = "newport_serde" }
sync 		= { path = "../sync", version = "0.1.0", package = "newport_sync" }
platform 		= { path = "../platform", version = "0.2.0", package = "newport_platform" }