[package]
name = "newport_asset"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Thread safe asset manager for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_core   = { path = "../newport_core", version = "0.0.1" }
newport_log    = { path = "../newport_log", version = "0.0.1" }
newport_engine = { path = "../newport_engine", version = "0.0.1" }

ron = "0.6.4" # RON format for assets