[package]
name = "newport_cache"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Cache Builder for Newport"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_engine = { path = "../newport_engine", version = "0.2.0" }
newport_serde = { path = "../newport_serde", version = "0.2.0" }