[package]
name        = "newport_core"
version     = "0.0.1"
authors     = ["Colby <me@cobeh.com>"]
edition     = "2018"
license     = "MIT"
repository  = "https://github.com/colbyhall/newport"
categories  = ["game-engines", "game-development"]
keywords    = ["game", "engine", "gamedev", "newport"]
description = "Core engine library used by most packages for newport"

[dependencies]