[package]
name = "newport_ecs"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newport_math    = { path = "../newport_math", version = "0.0.1" }
newport_editor = { path = "../newport_editor", version = "0.0.1", optional = true }
slotmap = "1.0.3"

[features]
editable = ["newport_editor"]