[package]
name = "newport_editor"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newport_engine   = { path = "../newport_engine", version = "0.0.1" }
newport_gpu      = { path = "../newport_gpu", version = "0.0.1" }
newport_graphics = { path = "../newport_graphics", version = "0.0.1" }
newport_math = { path = "../newport_math", version = "0.0.1" }
newport_egui = { path = "../newport_egui", version = "0.0.1" }