[package]
name = "newport_editor"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Editor for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_engine   = { path = "../newport_engine", version = "0.2.0" }
newport_gpu      = { path = "../newport_gpu", version = "0.2.0" }
newport_graphics = { path = "../newport_graphics", version = "0.2.0" }
newport_math     = { path = "../newport_math", version = "0.2.0" }
newport_imgui    = { path = "../newport_imgui", version = "0.2.0" }
newport_os       = { path = "../newport_os", version = "0.2.0" }
newport_asset    = { path = "../newport_asset", version = "0.2.0" }
newport_codegen  = { path = "../newport_codegen", version = "0.2.0" }
newport_cache    = { path = "../newport_cache", version = "0.2.0" }
