[package]
name = "newport_egui"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newport_engine   = { path = "../newport_engine", version = "0.0.1" }
newport_gpu      = { path = "../newport_gpu", version = "0.0.1" }
newport_graphics = { path = "../newport_graphics", version = "0.0.1" }
newport_math = { path = "../newport_math", version = "0.0.1" }
newport_os = { path = "../newport_os", version = "0.0.1" }

egui = "0.11.0"