[package]
name = "newport_engine"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Core runnable library for the Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_core  = { path = "../newport_core", version = "0.0.1" }
newport_os    = { path = "../newport_os", version = "0.0.1" }
newport_math  = { path = "../newport_math", version = "0.0.1" }