[package]
name = "newport_game"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"

[dependencies]
newport_engine = { path = "../newport_engine", version = "0.0.1" }
newport_editor = { path = "../newport_editor", version = "0.0.1" }
newport_ecs    = { path = "../newport_ecs",    version = "0.0.1", features = ["editable"] }