[package]
name = "newport_game"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Library that provides general game state for making games on."
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_engine   = { path = "../newport_engine", version = "0.2.0" }
newport_ecs      = { path = "../newport_ecs",    version = "0.2.0", features = ["editable"] }
newport_math     = { path = "../newport_math",   version = "0.2.0" }
newport_gpu      = { path = "../newport_gpu",    version = "0.2.0" }
newport_graphics = { path = "../newport_graphics", version = "0.2.0" }
newport_asset    = { path = "../newport_asset", version = "0.2.0" }

newport_editor   = { path = "../newport_editor", version = "0.2.0", optional = true }

[features]
editor = ["newport_editor"]