[package]
name = "newport_gpu"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Thread safe render abstraction layer for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_engine = { path = "../newport_engine", version = "0.2.0" }
newport_log    = { path = "../newport_log", version = "0.2.0" }
newport_os     = { path = "../newport_os", version = "0.2.0" }
newport_math   = { path = "../newport_math", version = "0.2.0" }
newport_serde   = { path = "../newport_serde", version = "0.2.0" }
newport_asset   = { path = "../newport_asset", version = "0.2.0" }

ash  = "0.32.0"
bitflags = "1.2"

hassle-rs = "0.5.2"

stb_image = "0.2.3"

[features]
default = ["vulkan"]
vulkan  = []