[package]
name = "newport_graphics"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Graphics rendering library for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_engine = { path = "../newport_engine", version = "0.0.1" }
newport_gpu    = { path = "../newport_gpu", version = "0.0.1" }
newport_math   = { path = "../newport_math", version = "0.0.1" }
newport_asset  = { path = "../newport_asset", version = "0.0.1" }

freetype-rs = "0.27.0"