[package]
name = "newport_log"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Global logger package for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
newport_os     = { path = "../newport_os", version = "0.0.1" }
newport_core   = { path = "../newport_core", version = "0.0.1" }
newport_engine = { path = "../newport_engine", version = "0.0.1" }