[package]
name = "newport_math"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Math library that also works with spirv shaders for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]