[package]
name = "newport_os"
version = "0.0.1"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Os abstractions for engine use"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
newport_math = { path = "../newport_math", version = "0.0.1" }

[target.'cfg(unix)'.dependencies]
xcb = "0.8.2"
libc = "0.2.98"