[package]
name = "newport_os"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Os abstractions for engine use"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
lazy_static = "1.4.0"
newport_math = { path = "../newport_math", version = "0.2.0" }