[package]
name = "game3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine   		= { path = "../../runtime/engine", version = "0.2.0", package = "newport_engine" }
game   		= { path = "../../runtime/game", version = "0.1.0", package = "newport_game" }