[package]
name = "asset"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/colbyhall/newport"
description = "Thread safe asset manager for Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
engine = { path = "../engine" }
cache  = { path = "../cache" }

serde  = { path = "../../third_party/serde" }