[package]
name = "newport_engine"
version = "0.2.0"
authors = ["Colby <me@cobeh.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyhall/newport"
description = "Core runnable library for the Newport engine"
categories = ["game-engines", "game-development"]
keywords = ["game", "engine", "gamedev", "newport"]

[dependencies]
platform = { path = "../platform", version = "0.2.0", package = "newport_platform" }
math     = { path = "../math", version = "0.2.0", package = "newport_math" }
sync     = { path = "../sync", version = "0.1.0", package = "newport_sync" }
serde    = { path = "../serde", version = "0.2.0", package = "newport_serde" }

toml = "0.5"