[package]
name = "game"
version = "0.1.0"
edition = "2018"

[dependencies]
math 		= { path = "../math" }
graphics 	= { path = "../graphics" }
gpu 		= { path = "../gpu" }
asset 		= { path = "../asset" }
engine 		= { path = "../engine" }
serde 		= { path = "../../third_party/serde" }
sync 		= { path = "../sync" }
platform 	= { path = "../platform" }

[features]
default = []